main-style.css
a:link {
  color: #000000;
  text-decoration: none;
}

a:visited {
  color: #000000;
  text-decoration: none;
}

a:hover {
  color: #000000;
  text-decoration: none;
}

a:active {
  color: #000000;
  text-decoration: none;
}

ul {
  list-style-type: none;
  font-size: .8em;
  padding-left: 2.6em;
}

li {
  padding: .6em;
}

a {
  font-family: "Trebuchet MS", Helvetica, sans-serif;
}

a.ume{
  text-decoration: underline;
}

h1 {
  width: 12em;
  font-style: italic;
  font-family: "Trebuchet MS", Helvetica, sans-serif;
  padding-left: 2em;
  padding-top: 2em;
}

iframe {
  border:0;
  height: 700px;
  width: 300px;
  float: left;
  padding-left: 2em;
}

div.main {
  width: 50%;
  float: left;
  padding-top: 0em;
}

img {
  padding-top: 0em;
  float:right;
  height: 500px;
  vertical-align: middle;
}

div.content{
  float:left;
  width:1700px;
  height:550px;
}

div.images {
/*  width: 40%; */
  float: left;
  padding-top: 0em;
  padding-bottom: 0em;
}

div.descrip {
  display:inline;
  float:left;
  height: 500px;
  width:500px;
  position:relative;
}

div.imagedes {
  overflow: hidden;
  padding-left: 2em;
  position:absolute;
  bottom: 0;
}

div.buttons {
  padding-left: 1.5em;
  padding-top: 0em;
  width: 400px;
  outline: 0;
}

button {
  font-size: 2em;
  background-color: transparent;
  border:none;
}

p.about {
  font-family: "Courier New", Courier, monospace;
  font-size: .75em;
  line-height: 2em;
  text-align: left;
  padding-right: 3em;
  vertical-align: baseline;
  bottom: 0;
}

p.wi {
  padding-top: 0.5em;
  padding-right: 1em;
  float: left;
  font-size: .8em;
  padding-left: .5em;
  font-family: "Trebuchet MS", Helvetica, sans-serif;
}

